# pydmm

./: .gitignore  C_OPENMP_PARALLELIZATION.md  DIAGNOSIS.md  Dockerfile  FIX_SUMMARY.md  PARALLELIZATION_ANALYSIS.md  PARALLELIZATION_COMPARISON.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
docs/: dev.md
docs/examples/: classification_comparison.py  component_labeling.py  probability_comparison.py  reference_counts.py  sklearn_compatibility.py
src/pydmm/: __init__.py  core.py  dirichlet_fit.c  dirichlet_fit.h  dirichlet_fit_main.c  dirichlet_fit_main.h  dirichlet_fit_standalone.c  dirichlet_fit_standalone.h  wrapper.c
tests/: __init__.py  conftest.py  test_c_extension.py  test_core.py  test_model_selection.py  test_sklearn_compatibility.py
