[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "numpy>=1.19.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pydmm"
version = "0.1.0"
description = "Python wrapper for Dirichlet Mixture Model fitting"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["dirichlet", "mixture model", "compositional data", "microbiome"]

[project.urls]
Homepage = "https://github.com/your-username/pyDMM"
Repository = "https://github.com/your-username/pyDMM"
Issues = "https://github.com/your-username/pyDMM/issues"