[build-system]
requires = [
    "setuptools>=64.0.0",
    "wheel",
    "numpy>=1.19.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pydmm"
version = "0.2.2"
description = "Python wrapper for Dirichlet Mixture Model fitting"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
authors = [{name = "Sebastian Proost", email = "sebastian.proost@gmail.com"}]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "scikit-learn>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["dirichlet", "mixture model", "compositional data", "microbiome"]

[project.optional-dependencies]
dev = [
    "scipy",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
]

[project.urls]
Homepage = "https://github.com/sepro/pydmm"
Repository = "https://github.com/sepro/pydmm"
Issues = "https://github.com/sepro/pydmm/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]